--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -1,6 +1,112 @@
 <!--pages/list/list.wxml-->
 
+<!-- <view class="cu-bar search bg-white">
+    <view class="cu-avatar round" style="background-image:url(https://image.weilanwl.com/img/square-2.jpg);"></view>
+    <view class="search-form round">
+    <text class="cuIcon-search"></text>
+    <input type="text" placeholder="搜索图片、文章、视频" confirm-type="search"></input>
+    </view>
+    <view class="action">
+    <text>广州</text>
+    <text class="cuIcon-triangledownfill"></text>
+    </view>
+</view> -->
+<view class="cu-bar bg-red search">
+    <!-- <view class="cu-avatar round" style="background-image:url(https://image.weilanwl.com/img/square-1.jpg);"></view> -->
+    <!-- <image class="cu-avatar round bg-white" src="/images/icon_cup.png"></image> -->
+    
+    <view class="action">
+        <text>南宁</text>
+        <text class="cuIcon-triangledownfill"></text>
+    </view>
+    <view class="search-form radius">
+        <text class="cuIcon-search"></text>
+        <input type="text" placeholder="搜索咖啡、美食、生活" confirm-type="search"></input>
+    </view>
+    
+    <view class="action">
+        <!-- <text>南宁</text> -->
+        <text class="cuIcon-notice"></text>
+    </view>
+</view>
 
+<view class="cu-list grid col-{{gridCol}} {{gridBorder?'':'no-border'}}" style="background-color: var(--ghostWhite);">
+    <view class="cu-item  " style="border-radius:50%" wx:for="{{iconList}}"  wx:key wx:if="{{index<gridCol*2}}">
+        <view class="cuIcon-{{item.icon}} text-{{item.color}}">
+            <view class="cu-tag badge " wx:if="{{item.badge!=0}}">
+                <block wx:if="{{item.badge!=1}}">{{item.badge>99?"99+":item.badge}}</block>
+            </view>
+        </view>
+        <text>{{item.name}}</text>
+    </view>
+</view>
+
+<view class=" padding-lr  ">
+    <swiper class=" " indicator-dots="{{false}}" circular="false" autoplay="true" interval="5000"
+        duration="500" style="height:235rpx">
+        <swiper-item class=" block " wx:for="{{swiperList}}" wx:key="index">
+            <image class="block radius" style="width: 100%;" src="{{item}}" mode="widthFix" ></image>
+        </swiper-item>
+    </swiper>
+</view>
+
+<view class=" padding-lr ">
+    <view class=" ">
+        <!-- <view class="cu-bar bg-white solid-bottom ">
+            <view class="action">
+                <text class="cuIcon-title text-yellow "></text>我的先享足迹
+            </view>
+        </view> -->
+        <!-- wx:if="{{item.showDiscountCard}}"  -->
+        <view class="">
+            <view class="cu-list menu ">
+                <view 
+                    
+                    class="cu-item margin-top-sm  " 
+                    style="padding-left:0; border-radius: 12rpx; overflow:hidden" 
+                    wx:for="{{storeList}}" catchtap="toStore" 
+                    data-shop_id="{{item.Id}}">
+
+                    <view class="bg-red flex align-center padding-lr" style=" min-height: 150rpx;">
+                        <view class="cu-avatar round lg " style="background-image:url({{item.Logo}});"></view>
+                    </view>
+                    <view class="content padding-left">
+                        <view class="text-gray text-sm">{{item.Name}}</view>
+                        <view class="text-cut">
+                            <text class="cuIcon-infofill text-yellow  margin-right-xs"></text>8.8折
+                        </view>                        
+                    </view>
+                    <view class="action">
+                        <button class="cu-btn round bg-red text-white">领取</button>
+                        <view class="text-xs text-gray text-center margin-top-xs">剩余60%</view>
+                    </view>
+                </view>
+            </view>
+        </view>
+    </view>
+</view>
+<view class="pg-space"></view>
+<view class="cu-load text-gray {{!isLoad?'loading':'over'}}"></view>
+
+
+<view ></view>
+<view class="pg-space-xl"></view>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
 <image src="/images/swiper.png" style="width:750rpx;height:363rpx; display:block"></image>
 
 <scroll-view scroll-x class="bg-white nav" scroll-with-animation scroll-left="{{scrollLeft}}">
@@ -8,14 +114,13 @@
         {{item}}
     </view>
 </scroll-view>
-<!-- 商家列表 -->
 <view class="cu-card padding">
     <view class=" pg-radius">
-        <!-- <view class="cu-bar bg-white solid-bottom ">
+        <view class="cu-bar bg-white solid-bottom ">
             <view class="action">
                 <text class="cuIcon-title text-yellow "></text>我的先享足迹
             </view>
-        </view> -->
+        </view>
         <view class="">
             <view class="cu-list menu ">
                 <view wx:if="{{item.showDiscountCard}}" 
@@ -43,4 +148,4 @@
 
 <view class='flex align-center justify-center padding text-gray  margin-bottom'>            
     <navigator class="cu-btn round line-white margin-right "url="/pages/sign/sign"  >商户先享报名</navigator>
-</view>
+</view> -->
