--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -11,46 +11,50 @@
     <text class="cuIcon-triangledownfill"></text>
     </view>
 </view> -->
-<view class="cu-bar bg-red search">
-    <!-- <view class="cu-avatar round" style="background-image:url(https://image.weilanwl.com/img/square-1.jpg);"></view> -->
-    <!-- <image class="cu-avatar round bg-white" src="/images/icon_cup.png"></image> -->
-    
-    <view class="action">
+<view class="cu-bar bg-green search">
+    <view class="action" catchtap="toArea">
         <text>南宁</text>
         <text class="cuIcon-triangledownfill"></text>
     </view>
     <view class="search-form radius">
         <text class="cuIcon-search"></text>
-        <input type="text" placeholder="搜索咖啡、美食、生活" confirm-type="search"></input>
+        <input type="text" placeholder="搜索咖啡、美食、生活" confirm-type="search" bindconfirm="toSearch"></input>
     </view>
     
-    <view class="action">
-        <!-- <text>南宁</text> -->
-        <text class="cuIcon-notice"></text>
+    <view class="action" catchtap="toDisCard">
+        <text class="cuIcon-myfill"></text>
     </view>
 </view>
 
-<view class="cu-list grid col-{{gridCol}} {{gridBorder?'':'no-border'}}" style="background-color: var(--ghostWhite);">
+<view class="cu-list grid col-{{gridCol}} {{gridBorder?'':'no-border'}}" style="background-color: var(--white);">
     <view class="cu-item  " style="border-radius:50%" wx:for="{{iconList}}"  wx:key wx:if="{{index<gridCol*2}}">
-        <view class="cuIcon-{{item.icon}} text-{{item.color}}">
+
+        <!-- <view class="cuIcon-{{item.icon}} text-{{item.color}}">
             <view class="cu-tag badge " wx:if="{{item.badge!=0}}">
                 <block wx:if="{{item.badge!=1}}">{{item.badge>99?"99+":item.badge}}</block>
             </view>
+        </view> -->
+
+        <view class="flex justify-center">            
+            <image src="{{item.image}}" style="width:60px;height:60px;">           </image>
         </view>
+
         <text>{{item.name}}</text>
     </view>
 </view>
 
-<view class=" padding-lr  ">
-    <swiper class=" " indicator-dots="{{false}}" circular="false" autoplay="true" interval="5000"
-        duration="500" style="height:250rpx">
-        <swiper-item class=" block " wx:for="{{swiperList}}" wx:key="index">
-            <image class="block radius" style="width: 100%;" src="{{item}}" mode="widthFix" ></image>
-        </swiper-item>
-    </swiper>
-</view>
+<button open-type="contact">
+    <view class=" padding-lr  ">
+        <swiper class=" " indicator-dots="{{false}}" circular="false" autoplay="true" interval="5000"
+            duration="500" style="height:250rpx">
+            <swiper-item class=" block " wx:for="{{swiperList}}" wx:key="index">
+                <image class="block radius" style="width: 100%;" src="{{item}}" mode="widthFix" ></image>
+            </swiper-item>
+        </swiper>
+    </view>
+</button>
 
-<view class=" padding-lr ">
+<view class=" padding-lr " style="background-color:#f1f1f1;">
     <view class=" ">
         <!-- <view class="cu-bar bg-white solid-bottom ">
             <view class="action">
@@ -59,25 +63,27 @@
         </view> -->
         <!-- wx:if="{{item.showDiscountCard}}"  -->
         <view class="">
-            <view class="cu-list menu ">
+            <view class="cu-list menu " >
                 <view 
                     
                     class="cu-item margin-top-sm  " 
-                    style="padding-left:0; border-radius: 12rpx; overflow:hidden" 
+                    style="padding-left:0; border-radius: 12rpx; overflow:hidden;" 
                     wx:for="{{storeList}}" catchtap="toStore" 
                     data-shop_id="{{item.Id}}">
 
-                    <view class="bg-red flex align-center padding-lr" style=" min-height: 150rpx;">
+                    <view class="bg-green flex align-center padding-lr" style=" min-height: 150rpx;">
                         <view class="cu-avatar round lg " style="background-image:url({{item.Logo}});"></view>
                     </view>
-                    <view class="content padding-left">
-                        <view class="text-gray text-sm">{{item.Name}}</view>
-                        <view class="text-cut">
-                            <text class="cuIcon-infofill text-yellow  margin-right-xs"></text>8.8折
+                    <view class="content padding-left text-gray">
+                        <view class="">{{item.Name}}</view>
+                        <view class="text-cut ">
+                            <text class="cuIcon-infofill  text-yellow margin-right-xs"></text>
+                            <text class="text-red text-bold text-lg">8.8折</text>
+                            
                         </view>                        
                     </view>
                     <view class="action">
-                        <button class="cu-btn round bg-red text-white">领取</button>
+                        <button class="cu-btn round bg-yellow text-white text-yellow">去领取</button>
                         <view class="text-xs text-gray text-center margin-top-xs">剩余60%</view>
                     </view>
                 </view>
