--- a/pages/route/route.wxss
+++ b/pages/route/route.wxss
@@ -1,1 +1,11 @@
 /* pages/route/route.wxss */
+
+page{
+    /* background-color: var(--green) */
+    background-color: var(--green);
+}
+
+.loading{
+    /* width: 100%; */
+    width:750rpx;
+}
