--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -11,7 +11,7 @@
     <text class="cuIcon-triangledownfill"></text>
     </view>
 </view> -->
-<view class="cu-bar bg-green search">
+<!-- <view class="cu-bar bg-green search">
     <view class="action" catchtap="toArea">
         <text>南宁</text>
         <text class="cuIcon-triangledownfill"></text>
@@ -24,13 +24,13 @@
     <view class="action" catchtap="toDisCard">
         <text class="cuIcon-my"></text>
     </view>
-</view>
+</view> -->
 
 <view class="cu-list grid col-{{gridCol}} {{gridBorder?'':'no-border'}}" style="background-color: var(--white);">
     <view class="cu-item  " style="border-radius:50%" 
     wx:for="{{iconList}}"  wx:key 
     wx:if="{{index<gridCol*2}}"
-    catchtap="clickMenu" >
+    catchtap="clickMenu" data-index="{{index}}" >
 
         <!-- <view class="cuIcon-{{item.icon}} text-{{item.color}}">
             <view class="cu-tag badge " wx:if="{{item.badge!=0}}">
@@ -47,11 +47,11 @@
 </view>
 
 <!-- <button open-type="contact"> -->
-    <view class=" padding-lr  ">
+    <view class=" padding-lr padding-bottom ">
         <swiper class=" " indicator-dots="{{false}}" circular="false" autoplay="true" interval="5000"
             duration="500" style="height:250rpx">
-            <swiper-item class=" block " wx:for="{{swiperList}}" wx:key="index">
-                <image class="block radius" style="width: 100%;" src="{{item}}" mode="widthFix" catchtap="toSign" ></image>
+            <swiper-item class=" block radius" wx:for="{{swiperList}}" wx:key="index">
+                <image class="block radius" style="width: 100%;" src="{{item}}" mode="widthFix" catchtap="clickSwiper" data-index="{{index}}" ></image>
             </swiper-item>
         </swiper>
     </view>
@@ -71,7 +71,7 @@
                     wx:if="{{item.showDiscountCard}}" 
                     class="cu-item margin-top-sm  " 
                     style="padding-left:0; border-radius: 12rpx; overflow:hidden;" 
-                    wx:for="{{storeList}}" catchtap="toStore" 
+                    wx:for="{{currentStoreList}}" catchtap="toStore" 
                     data-shop_id="{{item.Id}}">
 
                     <view class="bg-green flex align-center padding-lr" style=" min-height: 150rpx;">
