--- a/pages/store/store.wxml
+++ b/pages/store/store.wxml
@@ -7,7 +7,7 @@
      <!-- <view class="pg-space-xl"></view> -->
 
     <view class="flex flex-direction justify-center align-center">
-        <image src="{{store.Logo}}" style="width:100px" mode="widthFix"></image>
+        <image src="{{store.Logo}}" class="logo" mode="widthFix"></image>
         <text class="text-bold text-lg margin-top">{{store.Name}}</text>
     </view>
 
@@ -15,19 +15,55 @@
     <view class="pg-space"></view>
         
 
-        <!-- 
-discount_card_id	:	20200429185046uCBfTx36D7Q0117937		
-appid	:	wxcd49aa99fd3d1f6a		
-usePercentage	:		true		
-discountPercentage	:	0.88		
-maxcount	:	1000		
-amount	:	0
-discountAmount	:	0		
-name	:	7天内消费3次，每次享8.8折优惠		
-desc	:	7天内消费3次，每次享8.8折优惠		
-isUsed	:		true		
-starttime	:	2020-04-26 17:23		
-endtime	:	2020-08-26 17:23 -->
+    <view class="cu-card padding" wx:for="{{cardList}}">
+        <view class=" pg-radius  shadow shadow-warp bg-green text-white">
+            <view class="cu-bar  solid-bottom ">
+                <view class="action">
+                    <text class="text-price text-xxl"></text>                
+                    <!-- <text class="">先享规则</text>   -->
+                    <input></input>                      
+                </view>
+            </view>
+            <!-- <view class="cu-list menu ">
+                <view class="flex justify-between align-center padding ">
+                    <view class="action">
+                        <text class="">奖励</text>
+                    </view>
+                    <view class="action text-bold {{ isHasDiscountCard ? '' : 'text-red' }} text-xl basis-xl text-right" >
+                        <text class="">{{item.reward_desc}}</text>
+                    </view>
+                </view>
+                <view class="flex justify-between padding ">
+                    <view class="action">
+                        <text class="f">任务</text>
+                    </view>
+                    <view class="action basis-xl text-right">
+                        <text class="">{{item.objective_desc}}</text>
+                    </view>
+                </view>
+               
+                <view class=" padding-lr padding-bottom ">
+                     <view class="" style=" border-top: 1rpx solid rgba(0, 0, 0, 0.1) ;"  ></view>
+                    <view class="  text-sm  {{ !isHasDiscountCard ? ' text-gray' : ' text-white' }} margin-top-sm" >
+                       <text class="cuIcon-info margin-right-xs"></text> <text class="">如未完成约定消费次数，微信支付将自动扣除已享优惠额度</text>
+                    </view>
+                </view>
+                
+            </view>      -->
+        </view>    
+    </view>
+    <view class="padding-lr">
+        <button class="cu-btn bg-green text-white block padding-tb " 
+            catchtap="getNewCard" data-discount_card_id="{{item.discount_card_id}}"
+        >领取奖励，再付款</button>
+    </view>
+       
+    <!-- <view class="flex justify-center margin-top">
+        <image src="/images/swiper2.jpg" mode="widthFix" style="width:90vw"></image>
+    </view>
+    <view class="flex justify-center margin-top">
+        <button class="cu-btn bg-yellow text-white round">参与活动</button>
+    </view> -->
 
     <view class="cu-card padding" wx:for="{{cardList}}">
         <view class=" pg-radius  shadow shadow-warp {{ !isHasDiscountCard ? 'bg-gray text-black' : 'bg-yellow text-white' }} ">
@@ -49,7 +85,7 @@ endtime	:	2020-08-26 17:23 -->
                     <view class="action">
                         <text class="">奖励</text>
                     </view>
-                    <view class="action text-bold {{ isHasDiscountCard ? '' : 'text-red' }} text-xl">
+                    <view class="action text-bold {{ isHasDiscountCard ? '' : 'text-red' }} text-xl basis-xl text-right" >
                         <text class="">{{item.reward_desc}}</text>
                     </view>
                 </view>
@@ -57,7 +93,7 @@ endtime	:	2020-08-26 17:23 -->
                     <view class="action">
                         <text class="f">任务</text>
                     </view>
-                    <view class="action">
+                    <view class="action basis-xl text-right">
                         <text class="">{{item.objective_desc}}</text>
                     </view>
                 </view>
@@ -173,8 +209,8 @@ endtime	:	2020-08-26 17:23 -->
 </view>
 
 <view class='flex align-center justify-center padding text-gray  margin-bottom'>            
-    <navigator class="cu-btn round bg-gray text-gray margin-right "url="/pages/sign/sign"  >商户先享开通</navigator>
-    <button class="cu-btn round line-gray text-gray  " open-type="contact"  >小杯子客服</button>
+    <!-- <navigator class="cu-btn round bg-gray text-gray margin-right "url="/pages/sign/sign"  >商户先享开通</navigator> -->
+    <button class="cu-btn round line-gray text-gray  " open-type="contact"  >小杯子先享卡客服</button>
 </view>
 
 <view class="pg-space"></view> 
