--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -49,9 +49,9 @@
 <!-- <button open-type="contact"> -->
     <view class=" padding-lr padding-bottom ">
         <swiper class=" " indicator-dots="{{false}}" circular="false" autoplay="true" interval="5000"
-            duration="500" style="height:250rpx">
+            duration="500" style="height:290rpx">
             <swiper-item class=" block radius" wx:for="{{swiperList}}" wx:key="index">
-                <image class="block radius" style="width: 100%;" src="{{item}}" mode="widthFix" catchtap="clickSwiper" data-index="{{index}}" ></image>
+                <image class="block radius" style="width: 100%;display:block" src="{{item}}" mode="widthFix" catchtap="clickSwiper" data-index="{{index}}" ></image>
             </swiper-item>
         </swiper>
     </view>
