--- a/pages/store/store.wxss
+++ b/pages/store/store.wxss
@@ -56,3 +56,21 @@
 .price-input{
     color:white;
 }
+
+
+.member_box{
+
+    border-radius: 50%;
+    overflow: hidden;
+    width: 40px;
+    height: 40px;
+}
+.member_icon{
+    width: 40px;
+    height: 40px;
+    display: block;
+}
+
+
+
+/***************抽屉*/
